feat: move fidelity bonds to earn screen (#361)
* feat: move fidelity bonds to earn screen

* feat: error handling

* fix: dark mode

* fix: consolidate old code

* fix: selection box ui

* fix: dark mode fix

* fix: remove cj-out testing rig

* fix: typos

Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

* review: resuse settings from parent

* review: hide balance on existing fidelity bond

* review: clear alerts on successful requests

* review: do not compress selection box

* review: fix promise code

Co-authored-by: Gigi <109058+dergigi@users.noreply.github.com>

--- a/src/components/jars/Jar.module.css
+++ b/src/components/jars/Jar.module.css
@@ -39,6 +39,7 @@
 
 .selectableJarContainer:not(.selectable) {
   color: var(--bs-gray-600);
+  cursor: unset;
 }
 
 .selectableJarContainer:not(.selectable) > .selectionCircle {
