--- a/src/components/fb/FidelityBondSteps.module.css
+++ b/src/components/fb/FidelityBondSteps.module.css
@@ -236,3 +236,19 @@
   color: var(--bs-gray-600);
   word-break: break-all;
 }
+
+.createdCheckmark {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  background-color: rgba(39, 174, 96, 1);
+  color: white;
+  border-radius: 50%;
+}
+
+.createdSummaryTitle {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
