--- a/src/components/DisplayAccountsOverlay.module.css
+++ b/src/components/DisplayAccountsOverlay.module.css
@@ -1,44 +1,60 @@
-.accounts-overlay {
+.overlayContainer {
   width: 100vw !important;
   height: 100vh !important;
   z-index: 1100 !important;
 }
 
-.accounts-overlay-header {
-  background-color: var(--bs-gray-100);
+.overlayHeader {
+  min-height: 75px;
+  max-height: 75px;
   border-bottom: 1px solid var(--bs-gray-300);
-  margin-bottom: 2rem;
+  box-shadow: 0px 1px 5px var(--bs-gray-400);
+  z-index: 1000;
 }
 
-.accounts-overlay-header button:hover {
+.overlayHeader button:hover {
   color: inherit;
 }
 
-.accounts-overlay-header-title {
-  display: inline-flex;
-  justify-content: space-between;
-  width: 8ch;
-  margin: 0 0.5rem;
-}
-
-:root[data-theme='dark'] .accounts-overlay-header {
+:root[data-theme='dark'] .overlayHeader {
   color: var(--bs-white);
   border-color: var(--bs-gray-800) !important;
   background-color: var(--bs-gray-700);
 }
 
-.accounts-overlay .offcanvas-body {
+.overlayHeader .accountStepperTitle {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 1rem;
+  gap: 0.2rem;
+  color: var(--bs-gray-800);
+}
+
+.overlayHeader .accountStepperButton {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  background-color: var(--bs-gray-100);
+  box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.1) !important;
+  color: var(--bs-gray-600);
+  padding: 0;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.overlayBody {
+  background-color: var(--bs-gray-100);
   padding: 0;
 }
 
-.offcanvas-body .accordion-item {
+.overlayBody .accountItem {
+  margin-bottom: 1rem;
   border: none;
 }
 
-.accordion-item .accordion-body {
-  padding: 0 !important;
-}
-
-.accordion-item button {
-  box-shadow: none !important;
+.utxoListContainer {
+  padding: 1rem 1.25rem;
+  background-color: white;
 }
