dev: harmonize options button styles on Receive and Earn page

--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -22,6 +22,8 @@
   background-color: transparent !important;
   border: none;
   padding-left: 0;
+  height: 3rem;
+  width: 100%;
 }
 
 .receive form input {
