--- a/src/components/Earn.module.css
+++ b/src/components/Earn.module.css
@@ -12,7 +12,7 @@
   height: 3.5rem;
 }
 
-.earn form button {
+.earn .earn-btn {
   height: 3rem;
   width: 100%;
 }
@@ -25,7 +25,8 @@
   background-color: transparent !important;
   border: none;
   padding-left: 0;
-  font-weight: 500;
+  height: 3rem;
+  width: 100%;
 }
 
 .settings-container .input-group-text {
@@ -37,11 +38,11 @@
 }
 
 .earn hr {
-  background-color: rgba(222, 222, 222, 1);
+  border-color: rgba(222, 222, 222, 1);
   opacity: 100%;
 }
 
 :root[data-theme='dark'] .earn hr {
-  background-color: var(--bs-gray-800);
+  border-color: var(--bs-gray-800);
   opacity: 100%;
 }
