--- a/src/components/Receive.module.css
+++ b/src/components/Receive.module.css
@@ -1,10 +1,10 @@
 .receive hr {
-  background-color: rgba(222, 222, 222, 1);
+  border-color: rgba(222, 222, 222, 1);
   opacity: 100%;
 }
 
 :root[data-theme='dark'] .receive hr {
-  background-color: var(--bs-gray-800);
+  border-color: var(--bs-gray-800);
   opacity: 100%;
 }
 
@@ -22,6 +22,8 @@
   background-color: transparent !important;
   border: none;
   padding-left: 0;
+  height: 3rem;
+  width: 100%;
 }
 
 .receive form input {
