--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -144,13 +144,13 @@
   background-color: var(--bs-gray-800);
 }
 
-.overlayBody .utxoListContainer > .utxoListTitleBar > .freezeUnfreezeButtonsContainer {
+.overlayBody .utxoListContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
 }
 
-.overlayBody .utxoListContainer > .utxoListTitleBar > .freezeUnfreezeButtonsContainer > button {
+.overlayBody .utxoListContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
   width: 8rem;
   font-size: 0.6rem;
   padding: 0.3rem 0.5rem;
@@ -159,26 +159,42 @@
   align-items: center;
   gap: 0.3rem;
   background-color: white;
-  border: 1px solid var(--bs-gray-400);
+  border: 1px solid var(--bs-gray-200);
   color: var(--bs-body-color);
   border-radius: 0.35rem;
 }
 
+.overlayBody .utxoListContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button:hover {
+  background-color: var(--bs-btn-hover-bg);
+  border-color: var(--bs-btn-hover-border-color);
+}
+
 @media only screen and (min-width: 768px) {
-  .overlayBody .utxoListContainer > .utxoListTitleBar > .freezeUnfreezeButtonsContainer > button {
+  .overlayBody .utxoListContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
     width: 10rem;
     font-size: 0.8rem;
   }
+}
+
+:root[data-theme='dark'] .overlayBody .utxoListContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
+  background-color: var(--bs-gray-600) !important;
+  border-color: var(--bs-gray-600);
 }
 
 :root[data-theme='dark']
   .overlayBody
   .utxoListContainer
   > .utxoListTitleBar
-  > .freezeUnfreezeButtonsContainer
-  > button {
-  background-color: var(--bs-gray-600) !important;
-  border-color: var(--bs-gray-600);
+  .freezeUnfreezeButtonsContainer
+  > button:hover {
+  background-color: var(--bs-gray-700) !important;
+  border-color: var(--bs-gray-700);
+}
+
+.overlayBody .utxoListContainer > .utxoListTitleBar .refreshButton {
+  width: 2rem;
+  padding: 0.1rem;
+  border: none;
 }
 
 .overlayBody .accountItem {
