--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -86,6 +86,14 @@
   height: 1.5rem;
 }
 
+.overlayHeader .accountStepperButton:focus {
+  color: var(--bs-gray-600);
+}
+
+.overlayHeader .accountStepperButton:active {
+  color: var(--bs-gray-600);
+}
+
 :root[data-theme='dark'] .overlayHeader .accountStepperButton {
   background-color: var(--bs-gray-600);
   box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5) !important;
