--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -94,16 +94,7 @@
   color: var(--bs-body-color);
 }
 
-.overlayBody {
-  background-color: var(--bs-gray-100);
-  padding: 0;
-}
-
-:root[data-theme='dark'] .overlayBody {
-  background-color: var(--bs-gray-800);
-}
-
-.overlayBody .tabContainer {
+.tabContainer {
   display: flex;
   flex-direction: column;
   gap: 2.5rem;
@@ -111,13 +102,13 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .overlayBody .tabContainer {
+  .tabContainer {
     padding: 2rem 3rem;
     border-radius: 0.5rem;
   }
 }
 
-.overlayBody .tabContainer > .utxoListTitleBar {
+.tabContainer > .utxoListTitleBar {
   min-height: 3.6rem;
   display: flex;
   justify-content: space-between;
@@ -129,7 +120,7 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .overlayBody .tabContainer > .utxoListTitleBar {
+  .tabContainer > .utxoListTitleBar {
     align-items: center;
     padding: 0.8rem 1rem;
     border-radius: 0.6rem;
@@ -137,22 +128,22 @@
 }
 
 @media only screen and (min-width: 768px) {
-  .overlayBody .tabContainer > .utxoListTitleBar {
+  .tabContainer > .utxoListTitleBar {
     flex-direction: row;
   }
 }
 
-:root[data-theme='dark'] .overlayBody .tabContainer > .utxoListTitleBar {
+:root[data-theme='dark'] .tabContainer > .utxoListTitleBar {
   background-color: var(--bs-gray-800);
 }
 
-.overlayBody .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer {
+.tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer {
   display: flex;
   flex-direction: row;
   gap: 0.5rem;
 }
 
-.overlayBody .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
+.tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
   width: 8rem;
   font-size: 0.6rem;
   padding: 0.3rem 0.5rem;
@@ -166,35 +157,35 @@
   border-radius: 0.35rem;
 }
 
-.overlayBody .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button:hover {
+.tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button:hover {
   background-color: var(--bs-btn-hover-bg);
   border-color: var(--bs-btn-hover-border-color);
 }
 
 @media only screen and (min-width: 768px) {
-  .overlayBody .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
+  .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
     width: 10rem;
     font-size: 0.8rem;
   }
 }
 
-:root[data-theme='dark'] .overlayBody .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
+:root[data-theme='dark'] .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button {
   background-color: var(--bs-gray-600) !important;
   border-color: var(--bs-gray-600);
 }
 
-:root[data-theme='dark'] .overlayBody .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button:hover {
+:root[data-theme='dark'] .tabContainer > .utxoListTitleBar .freezeUnfreezeButtonsContainer > button:hover {
   background-color: var(--bs-gray-700) !important;
   border-color: var(--bs-gray-700);
 }
 
-.overlayBody .tabContainer > .utxoListTitleBar .refreshButton {
+.tabContainer > .utxoListTitleBar .refreshButton {
   width: 2rem;
   padding: 0.1rem;
   border: none;
 }
 
-.overlayBody .accountItem {
+.accountItem {
   color: var(--bs-body-color);
   margin-bottom: 1rem;
   box-shadow: 0px 1px 2px var(--bs-gray-400);
@@ -202,29 +193,28 @@
   border-radius: 0.5rem !important;
   background-color: var(--bs-gray-100);
 }
-.overlayBody .accountItem:last-child {
+.accountItem:last-child {
   margin-bottom: 0;
 }
 
 :root[data-theme='dark']
-  .overlayBody
   .accountItem
   :global
   .card:not(.border-success):not(.border-danger):not(.border-warning):not(.border-primary):not(.border-info) {
   border-color: var(--bs-gray-700) !important;
 }
 
-:root[data-theme='dark'] .overlayBody .accountItem {
+:root[data-theme='dark'] .accountItem {
   background-color: var(--bs-gray-800) !important;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.overlayBody .accountItem > h2 > button {
+.accountItem > h2 > button {
   border-radius: 0.5rem !important;
   background-color: var(--bs-gray-100);
   box-shadow: none;
 }
 
-.overlayBody .accountItem :global .container-fluid {
+.accountItem :global .container-fluid {
   padding-left: 0;
 }
