--- a/src/components/EarnReport.module.css
+++ b/src/components/EarnReport.module.css
@@ -2,3 +2,14 @@
   height: 2.625rem;
   margin: 1px 0;
 }
+
+.earnReportContainer {
+  background-color: var(--bs-body-bg);
+}
+
+@media only screen and (min-width: 768px) {
+  .earnReportContainer {
+    border-radius: 0.5rem;
+    padding: 2rem;
+  }
+}
