fix: same overlay container for all fullscreen offcanvas components

--- a/src/components/EarnReport.module.css
+++ b/src/components/EarnReport.module.css
@@ -3,12 +3,12 @@
   margin: 1px 0;
 }
 
-.earnReportContainer {
+.overlayContainer .earnReportContainer {
   background-color: var(--bs-body-bg);
 }
 
 @media only screen and (min-width: 768px) {
-  .earnReportContainer {
+  .overlayContainer .earnReportContainer {
     border-radius: 0.5rem;
     padding: 2rem;
   }
