--- a/src/components/Send.module.css
+++ b/src/components/Send.module.css
@@ -150,6 +150,12 @@ input[type='number'] {
   filter: blur(2px);
 }
 
+.infoIcon {
+  color: var(--bs-gray-500);
+  border: 1px solid var(--bs-gray-500);
+  border-radius: 50%;
+}
+
 .accordion-button {
   border: none;
   width: 100%;
