--- a/src/components/Orderbook.module.css
+++ b/src/components/Orderbook.module.css
@@ -1,10 +1,57 @@
-.orderbook-overlay {
-  width: 100vw !important;
-  height: 100vh !important;
-  z-index: 1100 !important;
-}
-
 .orderbook-line-placeholder {
   height: 2.625rem;
   margin: 1px 0;
+}
+
+.overlayContainer .orderbookContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  background-color: var(--bs-body-bg);
+}
+
+@media only screen and (min-width: 768px) {
+  .overlayContainer .orderbookContainer {
+    padding: 2rem;
+    border-radius: 0.5rem;
+  }
+}
+
+.overlayContainer .orderbookContainer > .titleBar {
+  min-height: 3.6rem;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+  padding: 0 0 0.8rem 0;
+  background-color: var(--bs-gray-100);
+}
+
+@media only screen and (min-width: 768px) {
+  .overlayContainer .orderbookContainer > .titleBar {
+    align-items: center;
+    padding: 0.8rem 1rem;
+    border-radius: 0.6rem;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .overlayContainer .orderbookContainer > .titleBar {
+    flex-direction: row;
+  }
+}
+
+:root[data-theme='dark'] .overlayContainer .orderbookContainer > .titleBar {
+  background-color: var(--bs-gray-800);
+}
+
+.overlayContainer .orderbookContainer > .titleBar .refreshButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 2rem;
+  height: 2rem;
+  padding: 0.1rem;
+  border: none;
 }
