--- a/src/components/Send.module.css
+++ b/src/components/Send.module.css
@@ -151,6 +151,7 @@ input[type='number'] {
 }
 
 .infoIcon {
+  margin: 2px 0 0 0.25rem;
   color: var(--bs-gray-500);
   border: 1px solid var(--bs-gray-500);
   border-radius: 50%;
