fix: accordion bg color (#449)

--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -204,6 +204,10 @@
   box-shadow: none;
 }
 
+:root[data-theme='dark'] .overlayContainer .accountItem > h2 > button {
+  background-color: var(--bs-accordion-bg);
+}
+
 .overlayContainer .accountItem :global .container-fluid {
   padding-left: 0;
 }
