style(jars): adjust date and elderberry colors

--- a/src/components/jars/Jar.module.css
+++ b/src/components/jars/Jar.module.css
@@ -21,11 +21,11 @@
 }
 
 .dateJam {
-  --jamColor: #ff422c;
+  --jamColor: #964b00;
 }
 
 .elderberryJam {
-  --jamColor: #0c80b9;
+  --jamColor: #7b3183;
 }
 
 .jarIndex {
