review: use ::first-letter to emphasize first char in jam name

--- a/src/components/jars/Jar.module.css
+++ b/src/components/jars/Jar.module.css
@@ -33,6 +33,10 @@
   color: var(--bs-gray-600);
 }
 
+.jarIndex::first-letter {
+  font-weight: bold;
+}
+
 .jarBalance {
   display: inline-flex;
   justify-content: center;
