feat: colored jars with names (#476)
* style(svg): add jamColor to all jars

* feat: add jar flavor based on index

* feat(jar): named jars with bold initial

* feat(jar-detail): use initial, not index

* feat: "Jar #{n}" -> "Jar {X}"

* feat(send): use full name in from & recipient

--- a/src/components/jars/Jar.module.css
+++ b/src/components/jars/Jar.module.css
@@ -8,9 +8,33 @@
   margin: 0 0 0.25rem 0;
 }
 
+.apricotJam {
+  --jamColor: #ffb765;
+}
+
+.blueberryJam {
+  --jamColor: #6a9bff;
+}
+
+.cherryJam {
+  --jamColor: #ff636b;
+}
+
+.dateJam {
+  --jamColor: #964b00;
+}
+
+.elderberryJam {
+  --jamColor: #7b3183;
+}
+
 .jarIndex {
   font-size: 0.8rem;
   color: var(--bs-gray-600);
+}
+
+.jarIndex::first-letter {
+  font-weight: bold;
 }
 
 .jarBalance {
