--- a/src/components/LogOverlay.module.css
+++ b/src/components/LogOverlay.module.css
@@ -60,3 +60,20 @@
   max-height: 50vh;
   overflow: scroll;
 }
+
+.logContent code.DEBUG {
+  color: var(--bs-gray-700) !important;
+}
+:root[data-theme='dark'] .logContent code.DEBUG {
+  color: var(--bs-gray-500) !important;
+}
+
+.logContent code.INFO {
+  color: var(--bs-info) !important;
+}
+.logContent code.WARNING {
+  color: var(--bs-warning) !important;
+}
+.logContent code.ERROR {
+  color: var(--bs-danger) !important;
+}
