--- a/src/components/Earn.module.css
+++ b/src/components/Earn.module.css
@@ -3,7 +3,7 @@
   border-radius: 0.25rem;
 }
 
-.earn .fb-loader {
+.earn .fidelityBondsLoader {
   height: 11rem;
   border-radius: 0.25rem;
 }
@@ -45,4 +45,37 @@
 :root[data-theme='dark'] .earn hr {
   border-color: var(--bs-gray-800);
   opacity: 100%;
+}
+
+.offerLoader {
+  height: 10rem;
+  border-radius: 0.25rem;
+  margin-bottom: 1.5rem;
+}
+
+.offerContainer {
+  border: 1px solid var(--bs-gray-200);
+  border-radius: 0.3rem;
+  padding: 1.25rem;
+  margin-bottom: 1.5rem;
+}
+
+:root[data-theme='dark'] .offerContainer {
+  border-color: var(--bs-gray-700);
+}
+
+.offerContainer .offerTitle {
+  width: 100%;
+  font-size: 1.2rem;
+  color: var(--bs-body-color);
+}
+
+.offerContainer .offerLabel {
+  color: var(--bs-gray-600);
+  font-size: 0.8rem;
+}
+
+.offerContainer .offerContent {
+  font-size: 0.8rem;
+  word-break: break-all;
 }
