--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -89,6 +89,13 @@
     flex-direction: row;
     align-items: center;
   }
+
+  .selectedUtxosSumContainer {
+    order: 2;
+  }
+  .freezeUnfreezeButtonsContainer {
+    order: 1;
+  }
 }
 
 .overlayContainer .tabContainer .utxoListTitleBar .freezeUnfreezeButtonsContainer {
