--- a/src/components/jar_details/JarDetailsOverlay.module.css
+++ b/src/components/jar_details/JarDetailsOverlay.module.css
@@ -11,7 +11,7 @@
   color: var(--bs-gray-400);
 }
 
-.overlayContainer .accountStepperButton {
+.overlayContainer .jarStepperButton {
   display: inline-flex;
   align-items: center;
   justify-content: center;
@@ -24,15 +24,15 @@
   height: 1.5rem;
 }
 
-.overlayContainer .accountStepperButton:focus {
+.overlayContainer .jarStepperButton:focus {
   color: var(--bs-gray-600);
 }
 
-.overlayContainer .accountStepperButton:active {
+.overlayContainer .jarStepperButton:active {
   color: var(--bs-gray-600);
 }
 
-:root[data-theme='dark'] .accountStepperButton {
+:root[data-theme='dark'] .jarStepperButton {
   background-color: var(--bs-gray-600);
   box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.5) !important;
   color: var(--bs-body-color);
@@ -152,7 +152,7 @@
   border: none;
 }
 
-.overlayContainer .accountItem {
+.overlayContainer .jarItem {
   color: var(--bs-body-color);
   margin-bottom: 1rem;
   box-shadow: 0px 1px 2px var(--bs-gray-400);
@@ -160,33 +160,33 @@
   border-radius: 0.5rem !important;
   background-color: var(--bs-gray-100);
 }
-.overlayContainer .accountItem:last-child {
+.overlayContainer .jarItem:last-child {
   margin-bottom: 0;
 }
 
 :root[data-theme='dark']
   .overlayContainer
-  .accountItem
+  .jarItem
   :global
   .card:not(.border-success):not(.border-danger):not(.border-warning):not(.border-primary):not(.border-info) {
   border-color: var(--bs-gray-700) !important;
 }
 
-:root[data-theme='dark'] .overlayContainer .accountItem {
+:root[data-theme='dark'] .overlayContainer .jarItem {
   background-color: var(--bs-gray-800) !important;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
 }
 
-.overlayContainer .accountItem > h2 > button {
+.overlayContainer .jarItem > h2 > button {
   border-radius: 0.5rem !important;
   background-color: var(--bs-gray-100);
   box-shadow: none;
 }
 
-:root[data-theme='dark'] .overlayContainer .accountItem > h2 > button {
+:root[data-theme='dark'] .overlayContainer .jarItem > h2 > button {
   background-color: var(--bs-accordion-bg);
 }
 
-.overlayContainer .accountItem :global .container-fluid {
+.overlayContainer .jarItem :global .container-fluid {
   padding-left: 0;
 }
